[gd_scene load_steps=6 format=3 uid="uid://dkduxmrjthkt3"]

[ext_resource type="Script" path="res://Scripts/ScorpionTurret.gd" id="1_wqh60"]
[ext_resource type="Texture2D" uid="uid://dd4fn06aat85t" path="res://Assets/Textures/Scorpion_2.png" id="3_8o2fx"]
[ext_resource type="PackedScene" uid="uid://cddpy8wn110kt" path="res://Scenes/HealthComponent.tscn" id="3_a173j"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ho5dy"]
radius = 28.0
height = 64.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wfgo6"]
size = Vector2(123.5, 73)

[node name="ScorpionTurret" type="CharacterBody2D"]
position = Vector2(203, 174)
script = ExtResource("1_wqh60")
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(3, 4)
shape = SubResource("CapsuleShape2D_ho5dy")

[node name="LineOfSightPivot" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="LineOfSight" type="RayCast2D" parent="LineOfSightPivot"]
target_position = Vector2(400, 0)
metadata/_edit_lock_ = true

[node name="Raycasts" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="leftwallcheck" type="RayCast2D" parent="Raycasts"]
target_position = Vector2(-25, 30)
metadata/_edit_lock_ = true

[node name="rightwallcheck" type="RayCast2D" parent="Raycasts"]
target_position = Vector2(25, 30)
metadata/_edit_lock_ = true

[node name="leftfloorcheck" type="RayCast2D" parent="Raycasts"]
position = Vector2(-23, 0)
target_position = Vector2(0, 48)
metadata/_edit_lock_ = true

[node name="rightfloorcheck" type="RayCast2D" parent="Raycasts"]
position = Vector2(23, 0)
target_position = Vector2(1, 49)
metadata/_edit_lock_ = true

[node name="leftabovecheck" type="RayCast2D" parent="Raycasts"]
target_position = Vector2(-24, -30)
metadata/_edit_lock_ = true

[node name="rightabovecheck" type="RayCast2D" parent="Raycasts"]
target_position = Vector2(24, -30)
metadata/_edit_lock_ = true

[node name="leftsidecheck" type="RayCast2D" parent="Raycasts"]
target_position = Vector2(-28, 0)
metadata/_edit_lock_ = true

[node name="rightsidecheck" type="RayCast2D" parent="Raycasts"]
target_position = Vector2(28, 0)
metadata/_edit_lock_ = true

[node name="HealthComponent" parent="." node_paths=PackedStringArray("animation_sprite") instance=ExtResource("3_a173j")]
animation_sprite = NodePath("../Scorpion2")
metadata/_edit_lock_ = true

[node name="Area2D" type="Area2D" parent="HealthComponent" groups=["Hurtbox"]]
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="HealthComponent/Area2D"]
position = Vector2(0.25, 6.5)
shape = SubResource("RectangleShape2D_wfgo6")
metadata/_edit_lock_ = true

[node name="Scorpion2" type="Sprite2D" parent="."]
position = Vector2(-8, -8)
texture = ExtResource("3_8o2fx")
